[tool.poetry]
name = "xenposter"
version = "0.1.0"
description = ""
authors = ["Sami Altamimi <sami.n.altamimi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.0"
selenium = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
